--- a/style.css
+++ b/style.css
@@ -74,8 +74,6 @@ body {
 
 #header {
   width: 100%;
-  height: 20%;
-  margin: var(--rtc-margins-l);
   padding: var(--rtc-padding-m);
   background-color: var(--color-base-background-1);
   border-bottom: 0.1rem solid rgb var(--color-base-text);
@@ -288,8 +286,9 @@ button > img {
 
 .footer-end {
   position: absolute;
-  bottom: 30px;
   width: 100%;
+  bottom: 0;
+  left: 0;
   text-align: center;
   margin-right: var(--rtc-margins-m);
   color: var(--rtc-text-0);
@@ -339,9 +338,18 @@ button > img {
     font-size: 14px;
   }
 
+  .flex-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+  }
+
   .header-primary {
-    align-items: start;
+    justify-content: center;
     gap: 15px;
+    align-items: center;
   }
   header > .header-primary h1 {
     font-size: 10px;
@@ -361,7 +369,6 @@ button > img {
     display: none;
   }
   .icons {
-    margin-right: var(--rtc-margins-xxxl);
     gap: 11px;
   }
   .header-secundary {
@@ -398,6 +405,6 @@ button > img {
     display: none;
   }
   .footer-end {
-    padding-right: 30px;
+    padding: 10px;
   }
 }
